hw-25-di-все 3 варианта работают, добавил обработку ошибки некорректного ввода